--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.25",
     "axios": "^1.5.1",
     "mongodb": "^6.1.0",
+    "openai": "^4.11.1",
     "pinyin": "^3.0.0-alpha.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
